--- a/dbus/versioninfo.rc.in
+++ b/dbus/versioninfo.rc.in
@@ -12,36 +12,43 @@
  
 /* This file is processed by configure to create versioninfo.rc */
 
+#include <windows.h>
+
 VS_VERSION_INFO VERSIONINFO
  FILEVERSION @BUILD_FILEVERSION@
  PRODUCTVERSION @BUILD_FILEVERSION@
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
- FILEFLAGS 0x21L
+ FILEFLAGS VS_FF_DEBUG
 #else
- FILEFLAGS 0x20L
+ FILEFLAGS 0x0L
 #endif
- FILEOS 0x40004L
- FILETYPE 0x1L
+ FILEOS VOS__WINDOWS32
+ FILETYPE VFT_DLL
  FILESUBTYPE 0x0L
 BEGIN
     BLOCK "StringFileInfo"
     BEGIN
-        BLOCK "040904b0"
+        /* string need to match concated hex values in 'VarFileInfo' block */
+        BLOCK "040904e4"
         BEGIN
-            VALUE "Comments", "Provided under the terms of the GNU Lesser General Public License.\0"
-            VALUE "CompanyName", "FreeDesktop.org\0"
+            VALUE "Comments", "Provided under the terms of the GNU Lesser General Public License >= 2.0 or Academic Free License version 2.1\0"
+            VALUE "CompanyName", "freedesktop.org\0"
             VALUE "FileDescription", "dbus - FreeDesktop message bus system\0"
             VALUE "FileVersion", "@DBUS_VERSION@\0"
-            VALUE "InternalName", "dbus\0"
-            VALUE "LegalCopyright", "Copyright © 2009 FreeDesktop.org\0"
+            VALUE "InternalName", "libdbus-1-3\0"
+            VALUE "LegalCopyright", "Copyright © 1994-2017 dbus contributors, see dbus source code for details\0"
             VALUE "LegalTrademarks", "\0"
-            VALUE "OriginalFilename", "dbus-1.dll\0"
-            VALUE "PrivateBuild", "\0"
+            VALUE "OriginalFilename", "libdbus-1-3.dll\0"
             VALUE "ProductName", "dbus\0"
             VALUE "ProductVersion", "@DBUS_VERSION@\0"
             VALUE "SpecialBuild", "@BUILD_TIMESTAMP@\0"
         END
+    END
+    BLOCK "VarFileInfo"
+    BEGIN
+        /* supports English language (0x409) in the Windows ANSI codepage (1252). */
+        VALUE "Translation", 0x409, 1252
     END
 END
 
