--- a/dbus/versioninfo.rc.in
+++ b/dbus/versioninfo.rc.in
@@ -24,7 +24,7 @@ VS_VERSION_INFO VERSIONINFO
  FILEFLAGS 0x0L
 #endif
  FILEOS VOS__WINDOWS32
- FILETYPE VFT_DLL
+ FILETYPE @DBUS_VER_FILE_TYPE@
  FILESUBTYPE 0x0L
 BEGIN
     BLOCK "StringFileInfo"
@@ -32,14 +32,14 @@ BEGIN
         /* string need to match concated hex values in 'VarFileInfo' block */
         BLOCK "040904e4"
         BEGIN
-            VALUE "Comments", "Provided under the terms of the GNU Lesser General Public License >= 2.0 or Academic Free License version 2.1\0"
+            VALUE "Comments", "Provided under the terms of the GNU General Public License >= 2.0 or Academic Free License version 2.1\0"
             VALUE "CompanyName", "freedesktop.org\0"
             VALUE "FileDescription", "dbus - FreeDesktop message bus system\0"
             VALUE "FileVersion", "@DBUS_VERSION@\0"
-            VALUE "InternalName", "libdbus-1-3\0"
-            VALUE "LegalCopyright", "Copyright © 1994-2017 dbus contributors, see dbus source code for details\0"
+            VALUE "InternalName", "@DBUS_VER_INTERNAL_NAME@\0"
+            VALUE "LegalCopyright", "Copyright © 1994-2018 dbus contributors, see dbus source code for details\0"
             VALUE "LegalTrademarks", "\0"
-            VALUE "OriginalFilename", "libdbus-1-3.dll\0"
+            VALUE "OriginalFilename", "@DBUS_VER_ORIGINAL_NAME@\0"
             VALUE "ProductName", "dbus\0"
             VALUE "ProductVersion", "@DBUS_VERSION@\0"
             VALUE "SpecialBuild", "@BUILD_TIMESTAMP@\0"
