cmake: Fold GObject detection into GLib detection
Everywhere that we want GLib, we also want GObject and GIO. Detecting
GLib and GIO but not GObject makes very little sense anyway, because
GIO depends on GObject.

Signed-off-by: Simon McVittie <smcv@collabora.com>
Bug: https://bugs.freedesktop.org/show_bug.cgi?id=105521
Reviewed-by: Ralf Habacker <ralf.habacker@freenet.de>

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -139,8 +139,7 @@ endif()
 find_package(EXPAT)
 find_package(X11)
 find_package(GLib2)
-find_package(GObject)
-if(GLIB2_FOUND AND GOBJECT_FOUND)
+if(GLIB2_FOUND)
     option (DBUS_WITH_GLIB "build with glib" ON)
 endif()
 
