build: Distribute individual files and directories from cmake/
If we distribute the entire directory in "make dist" tarballs, then
we include the generated files cmake/DBus1Config.cmake and
cmake/DBus1ConfigVersion.cmake, which we should not.

Signed-off-by: Simon McVittie <smcv@collabora.com>
Reviewed-by: Philip Withnall <withnall@endlessm.com>
Bug: https://bugs.freedesktop.org/show_bug.cgi?id=103420

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,7 +21,22 @@ EXTRA_DIST =			\
 	README.wince		\
 	README.cygwin		\
 	README.launchd		\
-	cmake
+	cmake/CMakeLists.txt \
+	cmake/ConfigureChecks.cmake \
+	cmake/DBus1Config.cmake.in \
+	cmake/DBus1Config.pkgconfig.in \
+	cmake/DBus1ConfigVersion.cmake.in \
+	cmake/bus \
+	cmake/bus-test.bat.cmake \
+	cmake/config.h.cmake \
+	cmake/dbus \
+	cmake/dbus-env.bat.cmake \
+	cmake/doc \
+	cmake/i686-w64-mingw32.cmake \
+	cmake/modules \
+	cmake/test \
+	cmake/tools \
+	$(NULL)
 
 all-local: Doxyfile
 
