Add a test for header fields
Signed-off-by: Simon McVittie <smcv@collabora.com>

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=100317
Reviewed-by: Philip Withnall <withnall@endlessm.com>
Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -161,6 +161,7 @@ installable_tests += \
 	test-dbus-daemon \
 	test-dbus-daemon-eavesdrop \
 	test-fdpass \
+	test-header-fields \
 	test-message \
 	test-monitor \
 	test-loopback \
@@ -321,6 +322,15 @@ test_dbus_daemon_LDADD = \
 test_dbus_daemon_eavesdrop_SOURCES = dbus-daemon-eavesdrop.c
 test_dbus_daemon_eavesdrop_LDADD = \
     libdbus-testutils.la \
+    $(GLIB_LIBS) \
+    $(NULL)
+
+test_header_fields_SOURCES = \
+    header-fields.c \
+    $(NULL)
+test_header_fields_LDADD = \
+    libdbus-testutils.la \
+    $(top_builddir)/dbus/libdbus-internal.la \
     $(GLIB_LIBS) \
     $(NULL)
 
