test: Add a test-case for EXTERNAL auth rejecting usernames
Signed-off-by: Simon McVittie <smcv@collabora.com>
Reviewed-by: Philip Withnall <withnall@endlessm.com>
Bug: https://bugs.freedesktop.org/show_bug.cgi?id=104588

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -477,6 +477,7 @@ static_data = \
 	data/auth/external-root.auth-script \
 	data/auth/external-silly.auth-script \
 	data/auth/external-successful.auth-script \
+	data/auth/external-username.auth-script \
 	data/auth/extra-bytes.auth-script \
 	data/auth/fail-after-n-attempts.auth-script \
 	data/auth/fallback.auth-script \
