dbus-spawn-unix: Rename from dbus-spawn
This file is the Unix counterpart of dbus-spawn-win.c, so it's less
confusing for it to have an indicative name.

Signed-off-by: Simon McVittie <smcv@collabora.com>
Reviewed-by: Philip Withnall <withnall@endlessm.com>
Bug: https://bugs.freedesktop.org/show_bug.cgi?id=104588

--- a/cmake/dbus/CMakeLists.txt
+++ b/cmake/dbus/CMakeLists.txt
@@ -227,7 +227,7 @@ else (WIN32)
 		${DBUS_DIR}/dbus-userdb.h
 	)
 	set (DBUS_UTIL_SOURCES ${DBUS_UTIL_SOURCES}
-		${DBUS_DIR}/dbus-spawn.c
+		${DBUS_DIR}/dbus-spawn-unix.c
 		${DBUS_DIR}/dbus-userdb-util.c
 		${DBUS_DIR}/dbus-sysdeps-util-unix.c
 	)
