Fix unterminated Automake conditional
Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/dbus/Makefile.am
+++ b/dbus/Makefile.am
@@ -117,6 +117,7 @@ DBUS_UTIL_arch_sources = 			\
 	dbus-sysdeps-util-unix.c		\
 	dbus-userdb-util.c			\
 	dbus-spawn-unix.c			\
+	$(NULL)
 endif
 
 if HAVE_LINUX_EPOLL
