tmpfiles: Add a note that one line is not needed with newer systemd
Signed-off-by: Simon McVittie <smcv@collabora.com>
(cherry picked from commit 8fd30736917e36b5eb69167dc3ef23be74f76039)

--- a/bus/tmpfiles.d/dbus.conf.in
+++ b/bus/tmpfiles.d/dbus.conf.in
@@ -1,6 +1,6 @@
 # Fields: type; path; mode; uid; gid; age; argument (symlink target)
 
-# Make ${localstatedir}/lib/dbus/
+# Make ${localstatedir}/lib/dbus (required for systemd < 237)
 # Adjust mode and ownership if it already exists.
 d @EXPANDED_LOCALSTATEDIR@/lib/dbus 0755 - - -
 
