Enable "unused result" warning for Visual Studio >= 2012 (MSVC 11.0)
The _Must_inspect_result_ annotation is documented to be used in both
the declaration and implementation, but in testing with the MSVC 2012
compiler it appears to be sufficient to use the annotation only in the
declaration to get a compiler warning, as with the GCC compiler.
So the annotation is not necessary in the C implementation.

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=105460
[smcv: Rebase dbus-sysdeps.h changes on master]
[smcv: Clarify commit message]
Reviewed-by: Simon McVittie <smcv@collabora.com>
Tested-by: Daniel Wendt <daniel.wendt@linux.com>

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -170,6 +170,7 @@ if(MSVC)
     ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE)
     SET(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS_DEBUG}   /FIconfig.h")
     SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /FIconfig.h")
+    option (DBUS_MSVC_ANALYZE "Enable code analyzing for MSVC compiler: /analyze" OFF)
 endif()
 
 #
@@ -212,6 +213,9 @@ if(MSVC)
     # 4114 same type qualifier used more than once
     # 4133 'type' : incompatible types - from 'type1' to 'type2'
     set(WARNINGS_ERRORS "4002 4003 4013 4028 4031 4047 4114 4133")
+    if(DBUS_MSVC_ANALYZE AND MSVC_VERSION GREATER 1600)
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /analyze")
+    endif()
 else()
     set(WARNINGS "sign-compare")
     set(WARNINGS_DISABLED "")
@@ -588,6 +592,9 @@ message("        Docbook Generator:        ${DOCBOOK_GENERATOR_NAME}           "
 
 
 message("        gcc coverage profiling:   ${DBUS_GCOV_ENABLED}                ")
+if(MSVC)
+message("        MSVC code analyze mode:   ${DBUS_MSVC_ANALYZE}                ")
+endif()
 message("        Building unit tests:      ${DBUS_BUILD_TESTS}                 ")
 message("        Building with GLib:       ${DBUS_WITH_GLIB}                   ")
 message("        Building verbose mode:    ${DBUS_ENABLE_VERBOSE_MODE}         ")
