--- a/.travis.yml
+++ b/.travis.yml
@@ -35,9 +35,10 @@ env:
   - ci_variant=reduced
   - ci_variant=legacy
   - ci_buildsys=cmake
-  - ci_host=mingw
-  - ci_host=mingw ci_variant=debug
-  - ci_host=mingw ci_buildsys=cmake
+  - ci_host=i686-w64-mingw32
+  - ci_host=i686-w64-mingw32 ci_buildsys=cmake ci_variant=debug
+  - ci_host=x86_64-w64-mingw32 ci_variant=debug
+  - ci_host=x86_64-w64-mingw32 ci_buildsys=cmake
   - ci_docker=ubuntu:xenial ci_distro=ubuntu ci_suite=xenial
   - ci_docker=debian:jessie-slim ci_distro=debian ci_suite=jessie
   - ci_docker=debian:stretch-slim ci_distro=debian ci_suite=stretch
