--- a/doc/dbus-daemon.1.xml.in
+++ b/doc/dbus-daemon.1.xml.in
@@ -386,6 +386,13 @@ mechanism will be authorized to connect. This option has no practical
 effect unless the ANONYMOUS mechanism has also been enabled using the
 <emphasis remap='I'>&lt;auth&gt;</emphasis> element, described below.</para>
 
+<para>Using this directive in the configuration of the well-known
+  system bus or the well-known session bus will make that bus insecure
+  and should never be done. Similarly, on custom bus types, using this
+  directive will usually make the custom bus insecure, unless its
+  configuration has been specifically designed to prevent anonymous
+  users from causing damage or escalating privileges.</para>
+
 <itemizedlist remap='TP'>
 
   <listitem><para><emphasis remap='I'>&lt;listen&gt;</emphasis></para></listitem>
